src/test/deca/context/invalid/assign_uncorrecte.deca
// Description:
//    Tester afftecter un float a une fonction readInt()
//
// Resultats:
//    assign_uncorrecte.deca:14: can't affecte read to this variable
//
// Historique:
//    cree le 01/01/2023

{
        int a=0;
        float b =7.7;
        boolean boo=true;
        b = readInt();

}